--- a/layout/_partial/left-col.ejs
+++ b/layout/_partial/left-col.ejs
@@ -57,5 +57,9 @@
           <%}%>
 			</div>
 		</nav>
+    <div class="motto">
+      <div>行 到 水 穷 处</div>
+      <div>坐 看 云 起 时</div>
+    </div>
 	</header>		
 </div>
