--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.27e6e1.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.c133c9.css">
