--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -23,6 +23,16 @@
     width: 76%;
     text-align: center;
     margin: 112px auto 0;
+
+    .motto {
+      margin-top: 100px;
+      font-size: 20px;
+      color: #fff8d6;
+
+      & :first-child {
+        margin-bottom: 10px;
+      }
+    }
   }
 
   #header {
