--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -57,19 +57,9 @@
 .article {
   margin: 0px 10px 10px;
   position: relative;
-  // border-bottom: 1px solid #fff;
   border-radius: 10px;
   transition: all 0.2s ease-in;
   box-shadow: 0px 0px 10px #ccc inset;
-  /*   &.show{
-    visibility: visible;
-    -webkit-animation: cd-bounce-1 0.6s;
-    -moz-animation: cd-bounce-1 0.6s;
-    animation: cd-bounce-1 0.6s;
-  }
-  &.hidden{
-    visibility: hidden;
-  } */
   img {
     max-width: 100%;
   }
@@ -77,7 +67,6 @@
 
 .article-inner h1.article-title,
 .article-title {
-  // color: #fff;
   color: rgb(255, 217, 0);
   margin-left: 0px;
   font-weight: 300;
@@ -105,9 +94,9 @@
   right: 7.6923%;
 }
 
-.archive-article-date {
-  // padding-right: 4px;
-}
+// .archive-article-date {
+//   // padding-right: 4px;
+// }
 
 .article-meta {
   width: 150px;
@@ -155,7 +144,6 @@
   margin: 10px 5px 0 5px;
   height: 100%;
   overflow: hidden;
-  // border-bottom: 1px solid #666;
   padding-bottom: 10px;
 }
 .article-info-index.article-info {
@@ -197,11 +185,6 @@
         display: none;
       }
     }
-
-    // .gt-user:hover {
-    //   background-color: #f5edc6;
-    //   color: #222;
-    // }
 
     .gt-popup {
       top: 3.375em;
@@ -473,16 +456,16 @@
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
 }
-/*分类页面，标签页面样式》*/
+/*分类页面，标签页面样式*/
 
-/*《版权声明的样式*/
+/*版权声明的样式*/
 .declare {
   background-color: #eaeaea;
   margin-top: 2em;
   border-left: 3px solid #ff1700;
   padding: 0.5em 1em;
 }
-/*版权声明的样式》*/
+/*版权声明的样式*/
 
 // 加密文章样式
 .hbe-content {
