--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -1,6 +1,5 @@
 .left-col {
   margin: 10px 10px;
-  // background-color: rgba(0, 0, 0, 0.2);
   background-color: #252525;
   border-radius: 15px;
   box-shadow: 0px 0px 10px #ccc inset;
@@ -69,19 +68,10 @@
       text-transform: uppercase;
       cursor: pointer;
 
-      // min-height: 100px;
-      // text-align: center;
-      // display: -webkit-box;
-      // -webkit-box-orient: horizontal;
-      // -webkit-box-pack: center;
-      // -webkit-box-align: center;
-
       .menu-text {
         width: 60%;
-        // background-color: rgba(225, 225, 225, 0.3);
         margin-bottom: 10px;
         border-radius: 8px;
-        // box-shadow: 0px 0px 10px #ccc inset;
         box-shadow: 0px 0px 6px #ccc inset;
 
         a {
@@ -292,3 +282,8 @@
     }
   }
 }
+
+// 白天模式
+// .left-col {
+//   background-color: #fff;
+// }
