--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -5,6 +5,11 @@
   <%- partial('post/title', {class_name: 'article-title'}) %>
   <% if (!post.noDate){ %>
   <%- partial('post/date', {class_name: 'archive-article-date', date_format: null}) %>
+  <!-- 文章字数统计 -->
+  <% if(theme.word_count && !post.no_word_count){%>
+  <%- partial('post/word') %>
+  <% } %>
+  <!-- 以上就是文章字数统计的全部内容 -->
   <% } %>
   </header>
   <% } %>
