change article count style

--- a/layout/_partial/post/word.ejs
+++ b/layout/_partial/post/word.ejs
@@ -1,14 +1,13 @@
-<div style="margin-top:10px;" class="article-count">
+<div class="article-count">
   <span class="post-time">
     <span class="post-meta-item-icon">
       <i class="fa fa-keyboard-o"></i>
-      <span class="post-meta-item-text"> 字数统计: </span>
+      <span class="post-meta-item-text"> 文章字数: </span>
       <span class="post-count"><%= wordcount(post.content) %>字</span>
     </span>
   </span>
-
   <span class="post-time">
-    &nbsp; | &nbsp;
+    &nbsp;|&nbsp;
     <span class="post-meta-item-icon">
       <i class="fa fa-hourglass-half"></i>
       <span class="post-meta-item-text"> 阅读时长: </span>
