--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -131,30 +131,35 @@ body,
 }
 
 .article-header {
-  // position: relative;
   border-left: none;
   padding: 0;
   border-bottom: 1px dotted #ddd;
-  // height: 65px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-start;
+
+  .article-count {
+    margin-left: 0px;
+    // margin-top: 8px;
+    width: 100%;
+    padding-bottom: 0;
+    font-size: 12px;
+    text-align: left;
+  }
 
   .time-count {
     display: flex;
     justify-content: space-between;
     align-items: center;
     right: 0;
-    top: 0;
-    // width: 100%;
-    height: 30px;
+    top: 9px;
     font-size: 12px;
-    margin-bottom: 10px;
   }
 
   .count {
-    margin-left: 30px;
+    margin-left: 10px;
+    font-size: 12px;
   }
 
   h1 {
@@ -215,7 +220,7 @@ body,
   }
   .article-inner h1.article-title,
   .article-title {
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 300;
     display: block;
     margin: 0;
