change  mobile article header style

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -141,11 +141,11 @@ body,
 
   .article-count {
     margin-left: 0px;
-    // margin-top: 8px;
+    padding-right: 0;
     width: 100%;
     padding-bottom: 0;
     font-size: 12px;
-    text-align: left;
+    text-align: center;
   }
 
   .time-count {
