--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -21,9 +21,7 @@
             </div>
           </div>
         </div>
-        <div id="scrollTop">
-          <div class="triangle"></div>
-        </div>
+        <div id="scrollTop"></div>
       </div>
       <%- partial('_partial/footer') %>
     </div>
