--- a/layout/_partial/left-col.ejs
+++ b/layout/_partial/left-col.ejs
@@ -1,6 +1,6 @@
-<% var defaultBg = '#4d4d4d'; %>
+<!-- <% var defaultBg = '#4d4d4d'; %>
 <div class="overlay" style="background: <%= theme.style && theme.style.header ? theme.style.header : defaultBg %>">
-</div>
+</div> -->
 <div class="intrude-less">
   <header id="header" class="inner">
     <a href="<%=theme.root%>" class="profilepic">
