--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -20,236 +20,239 @@
 
   .intrude-less {
     width: 76%;
+    height: calc(100% - 112px);
     text-align: center;
     margin: 112px auto 0;
 
-    .motto {
-      margin-top: 100px;
-      font-size: 20px;
-      color: #fff8d6;
-
-      & :first-child {
-        margin-bottom: 10px;
-      }
-    }
-  }
-
-  #header {
-    width: 100%;
-    height: 300px;
-    position: relative;
-    border-bottom: 1px solid color-border;
-    a {
-      // color: #fff;
-      &:hover {
-        color: rgb(255, 217, 0);
-      }
-    }
-    .header-subtitle {
-      text-align: center;
-      color: #999;
-      font-size: 14px;
-      line-height: 25px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-    }
-
-    .header-menu {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 30px;
-      font-weight: 700;
-      line-height: 35px;
-      text-transform: uppercase;
-      cursor: pointer;
-
-      .menu-text {
-        width: 60%;
-        margin-bottom: 10px;
-        border-radius: 8px;
-        box-shadow: 0px 0px 6px #ccc inset;
-
-        a {
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-          color: rgba(225, 225, 225, 0.6);
-          border-radius: 8px;
-
-          &:hover {
-            background-color: rgba(225, 225, 225, 0.6);
-            color: rgb(255, 217, 0);
-          }
-        }
-      }
-    }
-    .header-smart-menu {
-      font-size: 12px;
-      margin-bottom: 20px;
-      a {
-        &:after {
-          content: "/";
-        }
-        &:last-child {
-          &:after {
-            content: "";
-          }
-        }
-      }
-    }
-
-    @keyframes turnY {
-      0% {
-        transform: rotateY(0deg);
-      }
-      100% {
-        transform: rotateY(360deg);
-      }
-    }
-
-    .profilepic {
-      text-align: center;
-      display: block;
-      border: 5px solid #fff8d6;
-      box-shadow: 0px 0px 20px #ccc;
-      border-radius: 300px;
-      width: 128px;
-      height: 128px;
-      margin: 0 auto;
+    #header {
+      width: 100%;
+      height: 100%;
       position: relative;
-      overflow: hidden;
-      background: #88acdb;
-      -webkit-transition: all 0.2s ease-in;
-      display: -webkit-box;
-      -webkit-box-orient: horizontal;
-      -webkit-box-pack: center;
-      -webkit-box-align: center;
-      text-align: center;
-      &:hover {
-        animation-name: turnY;
-        animation-duration: 3s;
-        animation-iteration-count: 1;
-      }
-      img {
-        border-radius: 300px;
-        opacity: 1;
-        -webkit-transition: all 0.2s ease-in;
-        &.show {
-          width: 100%;
-          height: 100%;
-          opacity: 1;
+      border-bottom: 1px solid color-border;
+
+      .switch-btn {
+        max-height: calc(100% - 244px);
+        overflow-y: auto;
+        .motto {
+          margin-top: 58px;
+          font-size: 20px;
+          color: #fff8d6;
+
+          & :first-child {
+            margin-bottom: 10px;
+          }
+        }
+
+        .home {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .homeIcon {
+            width: 45px;
+            height: 45px;
+            background: url(../css/img/home.png) no-repeat;
+            background-size: 45px 45px;
+            cursor: pointer;
+          }
+        }
+
+        .tips-box {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          display: none;
+
+          &::before {
+            content: "";
+            width: 0;
+            height: 0;
+            border: 10px solid;
+            border-color: transparent transparent #595757;
+          }
+
+          .tips-text {
+            width: 60%;
+            height: 30px;
+            line-height: 30px;
+            cursor: pointer;
+            background-color: #252525;
+            font-size: 14px;
+
+            .tips-a {
+              color: hsla(0, 0%, 88%, 0.6);
+              font-weight: 700;
+            }
+
+            &:first-child {
+              border-top-left-radius: 6px;
+              border-top-right-radius: 6px;
+              box-shadow: 0px 0px 5px #ccc inset;
+              position: relative;
+              z-index: 5;
+            }
+
+            &:nth-child(2) {
+              box-shadow: 0px 0px 5px #ccc inset;
+              margin-top: -1px;
+            }
+
+            &:last-child {
+              border-bottom-left-radius: 6px;
+              border-bottom-right-radius: 6px;
+              box-shadow: 0px 0px 5px #ccc inset;
+              margin-top: -1px;
+            }
+
+            &:not(:first-child, :last-child) {
+              border-left: 1px solid #212121;
+              border-right: 1px solid #212121;
+            }
+
+            // border-radius: 6px;
+
+            a {
+              display: inline-block;
+              width: 100%;
+              height: 100%;
+            }
+
+            &:hover {
+              background-color: #959595;
+              color: rgb(255, 217, 0);
+            }
+          }
+        }
+
+        .tip-show {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
         }
       }
-    }
-    .header-author {
-      text-align: center;
-      margin: 0.67em 0;
-      font-family: Roboto, "Roboto", serif;
-      font-size: 35px;
-      transition: 0.3s;
-      font-weight: 700;
+
       a {
-        color: #fff8d6;
-        text-shadow: -1px -1px 0 #fff8d6, 2px 2px 0 #ccc, 1px 1px 0 #ccc;
-
         &:hover {
-          color: gold;
-        }
-      }
-    }
-  }
-
-  .switch-btn {
-    .home {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      .homeIcon {
-        width: 45px;
-        height: 45px;
-        background: url(../css/img/home.png) no-repeat;
-        background-size: 45px 45px;
-        cursor: pointer;
-      }
-    }
-
-    .tips-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      display: none;
-
-      &::before {
-        content: "";
-        width: 0;
-        height: 0;
-        border: 10px solid;
-        border-color: transparent transparent #595757;
-      }
-
-      .tips-text {
-        width: 60%;
-        height: 30px;
-        line-height: 30px;
-        cursor: pointer;
-        background-color: #252525;
-        font-size: 14px;
-
-        .tips-a {
-          color: hsla(0, 0%, 88%, 0.6);
-          font-weight: 700;
-        }
-
-        &:first-child {
-          border-top-left-radius: 6px;
-          border-top-right-radius: 6px;
-          box-shadow: 0px 0px 5px #ccc inset;
-          position: relative;
-          z-index: 5;
-        }
-
-        &:nth-child(2) {
-          box-shadow: 0px 0px 5px #ccc inset;
-          margin-top: -1px;
-        }
-
-        &:last-child {
-          border-bottom-left-radius: 6px;
-          border-bottom-right-radius: 6px;
-          box-shadow: 0px 0px 5px #ccc inset;
-          margin-top: -1px;
-        }
-
-        &:not(:first-child, :last-child) {
-          border-left: 1px solid #212121;
-          border-right: 1px solid #212121;
-        }
-
-        // border-radius: 6px;
-
-        a {
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-        }
-
-        &:hover {
-          background-color: #959595;
           color: rgb(255, 217, 0);
         }
       }
-    }
+      .header-subtitle {
+        text-align: center;
+        color: #999;
+        font-size: 14px;
+        line-height: 25px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
 
-    .tip-show {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      .header-menu {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        font-weight: 700;
+        line-height: 35px;
+        text-transform: uppercase;
+        cursor: pointer;
+
+        .menu-text {
+          width: 60%;
+          margin-bottom: 10px;
+          border-radius: 8px;
+          box-shadow: 0px 0px 6px #ccc inset;
+
+          a {
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            color: rgba(225, 225, 225, 0.6);
+            border-radius: 8px;
+
+            &:hover {
+              background-color: rgba(225, 225, 225, 0.6);
+              color: rgb(255, 217, 0);
+            }
+          }
+        }
+      }
+      .header-smart-menu {
+        font-size: 12px;
+        margin-bottom: 20px;
+        a {
+          &:after {
+            content: "/";
+          }
+          &:last-child {
+            &:after {
+              content: "";
+            }
+          }
+        }
+      }
+
+      @keyframes turnY {
+        0% {
+          transform: rotateY(0deg);
+        }
+        100% {
+          transform: rotateY(360deg);
+        }
+      }
+
+      .profilepic {
+        text-align: center;
+        display: block;
+        border: 5px solid #fff8d6;
+        box-shadow: 0px 0px 20px #ccc;
+        border-radius: 300px;
+        width: 128px;
+        height: 128px;
+        margin: 0 auto;
+        position: relative;
+        overflow: hidden;
+        background: #88acdb;
+        -webkit-transition: all 0.2s ease-in;
+        display: -webkit-box;
+        -webkit-box-orient: horizontal;
+        -webkit-box-pack: center;
+        -webkit-box-align: center;
+        text-align: center;
+        &:hover {
+          animation-name: turnY;
+          animation-duration: 3s;
+          animation-iteration-count: 1;
+        }
+        img {
+          border-radius: 300px;
+          opacity: 1;
+          -webkit-transition: all 0.2s ease-in;
+          &.show {
+            width: 100%;
+            height: 100%;
+            opacity: 1;
+          }
+        }
+      }
+      .header-author {
+        text-align: center;
+        margin: 0.67em 0;
+        font-family: Roboto, "Roboto", serif;
+        font-size: 35px;
+        transition: 0.3s;
+        font-weight: 700;
+        a {
+          color: #fff8d6;
+          text-shadow: -1px -1px 0 #fff8d6, 2px 2px 0 #ccc, 1px 1px 0 #ccc;
+
+          &:hover {
+            color: gold;
+          }
+        }
+      }
     }
   }
 
