--- a/source-src/css/social.scss
+++ b/source-src/css/social.scss
@@ -1,9 +1,9 @@
 #header .header-nav {
   width: 100%;
-  position: absolute;
+  // position: absolute;
   transition: transform 0.3s ease-in;
   .social {
-    margin-top: 10px;
+    margin-top: 18px;
     margin-bottom: 20px;
     text-align: center;
     display: flex;
