del hover menu bgc

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -112,9 +112,9 @@ body,
       bottom: 0;
       left: 0;
     }
-    &:hover {
-      background: #444;
-    }
+    // &:hover {
+    //   background: #444;
+    // }
     .icon {
       font-size: 24px;
       color: #fff;
