--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -67,9 +67,9 @@
     <%- partial('post/tag') %>
     <%- partial('post/category') %>
     <% if (index && theme.show_all_link){ %>
-    <p class="article-more-link">
+    <div class="article-more-link">
       <a class="article-more-a" href="<%- url_for(post.path) %>"><%= theme.show_all_link %> >></a>
-    </p>
+    </div>
     <% } %>
 
     <% if (!index && theme.share_jia){ %>
