--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -83,7 +83,8 @@
   position: relative;
   box-sizing: border-box;
   border-left: 8px solid rgb(255, 217, 0);
-  padding: 14px 0px 5px 10px;
+  padding: 25px 0px 5px 10px;
+  // padding: 14px 0px 5px 10px;
   padding-left: calc(7.6923% - 8px);
   border-top-left-radius: 10px;
   display: flex;
@@ -106,7 +107,7 @@
 
 .time-count {
   position: absolute;
-  top: 20px;
+  top: 31px;
   right: 7.6923%;
 
   .count {
@@ -137,10 +138,13 @@
 }
 
 .article-more-link {
-  margin-top: 0;
+  position: absolute;
+  right: 0;
+  bottom: 22px;
+  // margin-top: 0;
   text-align: left;
   float: right;
-  border-radius: 30px;
+  border-radius: 10px;
   a {
     box-shadow: 0 0 8px black;
     color: #ccc;
@@ -167,10 +171,16 @@
   padding-bottom: 10px;
 }
 .article-info-index.article-info {
+  position: relative;
   padding-top: 20px;
-  margin: 30px $articlePadding 0 $articlePadding;
+  margin: 20px $articlePadding 10px $articlePadding;
+  // 20px 7.6923% 10px 7.6923%;
   min-height: 72px;
   border-top: 5px solid #555;
+
+  // .clearfix {
+  //   margin-bottom: 20px;
+  // }
 }
 .article-info-post.article-info {
   padding: 0;
@@ -328,7 +338,7 @@
   font-weight: bold;
   font-family: STCaiyun, STXingkai;
   display: block;
-  /*渐变背景 #3498db,   #d71345 20%,  #d71345 70%, */
+  /*渐变背景*/
   background-image: -webkit-linear-gradient(
     left,
     #41c7af,
