--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.caf1b9.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.a8b8ec.css">
