--- a/layout/_partial/post/word.ejs
+++ b/layout/_partial/post/word.ejs
@@ -1,4 +1,4 @@
-<div class="article-count">
+<div class="article-count" <% if (post.encrypt == true) { %>style="display:none" <% } %>>
   <span class="post-time">
     <span class="post-meta-item-icon">
       <i class="fa fa-keyboard-o"></i>
