--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -23,6 +23,12 @@
     <%- post.content %>
     <% } %>
 
+    <!-- 版权声明 -->
+    <% if(theme.declare){%>
+    <%- partial('post/declare') %>
+    <% } %>
+    <!-- 版权声明 -->
+
     <% if ((theme.reward_type === 2 || (theme.reward_type === 1 && post.reward)) && !index){ %>
     <div class="page-reward">
       <a href="javascript:;" class="page-reward-btn tooltip-top">
