--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -213,7 +213,11 @@ body,
   font-size: 16px;
   color: #ccc;
   .article-more-link {
-    margin: 0;
+    position: absolute;
+    right: 0;
+    bottom: 2px;
+    text-align: center;
+    border-radius: 10px;
   }
   .article-entry {
     padding: 24px 0 0;
