--- a/source-src/css/article-main.scss
+++ b/source-src/css/article-main.scss
@@ -491,7 +491,7 @@
 .declare {
   background-color: #333;
   margin-top: 2em;
-  border-left: 3px solid gold;
+  border-left: 5px solid #666;
   padding: 0.5em 1em;
   word-break: break-all;
 
