update body scroll

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -8,6 +8,9 @@ body,
 #mobile-nav {
   display: block;
 }
+.mid-col.show .article {
+  background: none;
+}
 .body-wrap {
   margin-bottom: 0;
   overflow: visible;
