--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.2f373b.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.165db7.css">
