--- a/layout/_partial/aside.ejs
+++ b/layout/_partial/aside.ejs
@@ -11,7 +11,7 @@
     </div>
     <% } %>
     <% if (!index && ((theme.toc === 1 && post.toc) || theme.toc === 2)){ %>
-    <div class="toc-container tooltip-left">
+    <div class="toc-container tooltip-left" <% if (post.encrypt == true) { %>style="display:none" <% } %>>
       <i class="icon-font icon-category"></i>
       <div class="tooltip tooltip-east">
         <span class="tooltip-content">
