--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -1,6 +1,6 @@
 .left-col {
   margin: 10px 10px;
-  background-color: #252525;
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 15px;
   box-shadow: 0px 0px 10px #ccc inset;
   width: 300px;
