--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -307,6 +307,10 @@ body,
     bottom: 2px;
     text-align: center;
     border-radius: 10px;
+
+    a {
+      padding: 2px 5px;
+    }
   }
   .article-entry {
     padding: 24px 0 0;
