--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -19,8 +19,8 @@
 @import "./aside";
 @import "./tooltip";
 @import "./footer";
+@import "./light.scss";
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
-  
 }
