--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -521,8 +521,9 @@ body,
     .profilepic {
       display: block;
       position: relative;
-      // z-index: 100;
+      z-index: 1000;
       box-shadow: 0px 0px 20px #ccc;
+      cursor: pointer;
     }
   }
 }
