--- a/layout/_partial/left-col.ejs
+++ b/layout/_partial/left-col.ejs
@@ -3,7 +3,8 @@
 </div> -->
 <div class="intrude-less">
   <header id="header" class="inner">
-    <a href="<%=theme.root%>" class="profilepic">
+    <a class="profilepic">
+      <!-- <a href="<%=theme.root%>" class="profilepic"> -->
       <img src="<%=theme.avatar%>" class="js-avatar">
     </a>
     <hgroup>
