--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -8,12 +8,12 @@
     </div>
     <span class="btnctn-name">loading...</span>
   </div>
-  <div class="intrude-less">
+  <div class="intrude-less" id="intrude-less">
     <header id="header" class="inner">
-      <div class="profilepic">
+      <div class="profilepic" id="profilepic">
         <img src="<%=theme.avatar%>" class="js-avatar">
       </div>
-      <hgroup class="atthorName">
+      <hgroup class="atthorName" id="atthorName">
         <h1 class="header-author js-header-author"><%=theme.author%></h1>
       </hgroup>
       <% if (theme.subtitle){ %>
