--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.d816c5.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.5f7270.css">
