update light style

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.356228.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.7b6761.css">
