--- a/source-src/css/mobile-light.scss
+++ b/source-src/css/mobile-light.scss
@@ -10,11 +10,15 @@
     }
     .header-menu {
       ul {
-        background-color: #c9c9c9;
+        background-color: #c9c9c9 !important;
         li {
           a {
             background-color: #cfcfcf;
             box-shadow: none !important;
+            &.active {
+              color: #333 !important;
+              background-color: #dedede;
+            }
           }
         }
       }
