update change mode to light

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.eae1c0.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.392c2b.css">
