--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -20,8 +20,10 @@
 @import "./tooltip";
 @import "./footer";
 @import "./light";
+@import "./cover";
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
   @import "./mobile-light";
+  @import "./mobile-cover";
 }
