--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,6 +1,9 @@
 <%- partial('_partial/head') %>
 
 <body>
+  <div class="cover">
+    <h1 class="loading">LOADING</h1>
+  </div>
   <div id="container" q-class="show:isCtnShow">
     <canvas id="anm-canvas" class="anm-canvas"></canvas>
     <div class="left-col" q-class="show:isShow">
