--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.c7ed6f.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.a62c6f.css">
