--- a/source-src/css/grid.scss
+++ b/source-src/css/grid.scss
@@ -13,6 +13,7 @@ textarea {
 body {
   overflow-y: hidden;
   background: #292929;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 html,
 body,
