--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,6 +1,6 @@
 <%- partial('_partial/head') %>
 
-<body>
+<body class="bodyCover">
   <div class="cover">
     <h1 class="loading">LOADING</h1>
   </div>
