--- a/source-src/css/cover.scss
+++ b/source-src/css/cover.scss
@@ -1,6 +1,9 @@
 body {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   .cover {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Chrome 和 Safari */
+    -moz-backface-visibility: hidden; /* Firefox */
+    -ms-backface-visibility: hidden; /* Internet Explorer */
     position: absolute;
     top: 0;
     left: 0;
@@ -88,4 +91,10 @@ body {
     z-index: 0;
     transition: all 1s;
   }
+}
+
+.bodyCover {
+  width: 100%;
+  height: 100%;
+  border: 2px solid red;
 }
