--- a/source-src/css/mobile-cover.scss
+++ b/source-src/css/mobile-cover.scss
@@ -1,10 +1,13 @@
 body {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   position: fixed;
   width: 100%;
   height: 100%;
   overflow: hidden;
   .cover {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Chrome 和 Safari */
+    -moz-backface-visibility: hidden; /* Firefox */
+    -ms-backface-visibility: hidden; /* Internet Explorer */
     width: 100%;
     height: 100%;
     .loading {
