change cover bg

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,9 +1,21 @@
 <%- partial('_partial/head') %>
 
 <body class="bodyCover">
-  <div class="cover">
+  <!-- <div class="cover">
+    <ul id="lovelist">
+      <li class="loveitem1"></li>
+      <li class="loveitem2"></li>
+      <li class="loveitem3"></li>
+      <li class="loveitem4"></li>
+      <li class="loveitem5"></li>
+      <li class="loveitem6"></li>
+      <li class="loveitem7"></li>
+      <li class="loveitem8"></li>
+      <li class="loveitem9"></li>
+    </ul>
     <h1 class="loading">LOADING</h1>
-  </div>
+  </div> -->
+  <%- partial('_partial/cover') %>
   <div id="container" q-class="show:isCtnShow">
     <canvas id="anm-canvas" class="anm-canvas"></canvas>
     <div class="left-col" q-class="show:isShow">
