--- a/source-src/css/cover.scss
+++ b/source-src/css/cover.scss
@@ -1,35 +1,40 @@
 body {
   .cover {
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden; /* Chrome 和 Safari */
-    -moz-backface-visibility: hidden; /* Firefox */
-    -ms-backface-visibility: hidden; /* Internet Explorer */
     position: absolute;
     top: 0;
     left: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     opacity: 1;
     z-index: 99999;
-    // background-color: #ccc;
     transition: all 1s;
     background: linear-gradient(
       135deg,
-      hsl(110deg, 80%, 70%),
-      hsl(190deg, 80%, 70%),
-      hsl(100deg, 80%, 70%),
-      hsl(520deg, 80%, 70%),
-      hsl(60deg, 80%, 70%)
+      #e9defa,
+      #fbfcdb,
+      #a8edea,
+      #e0c3fc,
+      #d1e8f3
     );
+    // background: linear-gradient(
+    //   135deg,
+    //   hsl(110deg, 80%, 70%),
+    //   hsl(190deg, 80%, 70%),
+    //   hsl(100deg, 80%, 70%),
+    //   hsl(520deg, 80%, 70%),
+    //   hsl(60deg, 80%, 70%)
+    // );
     background-size: 200% 200%;
     animation: bgmove 5s infinite;
 
     .loading {
       position: relative;
-      color: #333;
+      color: #dedede;
+      // color: #75d0d9;
       font-size: 8rem;
       &::after {
         content: "LOADING";
@@ -60,7 +65,6 @@ body {
       }
     }
   }
-
   @keyframes bgmove {
     0% {
       background-position: 0% 0%;
@@ -68,7 +72,7 @@ body {
     50% {
       background-position: 100% 100%;
     }
-    1000% {
+    100% {
       background-position: 0% 0%;
     }
   }
@@ -86,15 +90,8 @@ body {
   }
 
   .hideCover {
-    // display: none;
     opacity: 0;
     z-index: 0;
     transition: all 1s;
   }
-}
-
-.bodyCover {
-  width: 100%;
-  height: 100%;
-  border: 2px solid red;
 }
