--- a/source-src/css/mobile-cover.scss
+++ b/source-src/css/mobile-cover.scss
@@ -4,14 +4,26 @@ body {
   height: 100%;
   overflow: hidden;
   .cover {
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden; /* Chrome 和 Safari */
-    -moz-backface-visibility: hidden; /* Firefox */
-    -ms-backface-visibility: hidden; /* Internet Explorer */
     width: 100%;
     height: 100%;
     .loading {
       font-size: 3rem;
+      &::after {
+        clip-path: circle(30px at 0% 30%);
+        animation: move 5s infinite;
+      }
+    }
+  }
+
+  @keyframes move {
+    0% {
+      clip-path: circle(30px at 0% 50%);
+    }
+    50% {
+      clip-path: circle(30px at 100% 50%);
+    }
+    100% {
+      clip-path: circle(30px at 0% 50%);
     }
   }
 }
