--- a/source-src/css/mobile-cover.scss
+++ b/source-src/css/mobile-cover.scss
@@ -6,6 +6,7 @@ body {
   .cover {
     width: 100%;
     height: 100%;
+    background-size: 150% 150%;
     .loading {
       font-size: 3rem;
       &::after {
