--- a/source-src/css/light.scss
+++ b/source-src/css/light.scss
@@ -1,7 +1,6 @@
 .container {
   position: relative;
-  background: #ebebeb !important;
-  // background-image: linear-gradient(-225deg, #dfe9f3 0%, white 100%) !important;
+  background: #eaeaea !important;
   background-image: linear-gradient(
     to top,
     #c4c5c7 0%,
