update cover style

--- a/layout/_partial/cover.ejs
+++ b/layout/_partial/cover.ejs
@@ -1,3 +1,16 @@
 <cover class="cover">
-  <h1 class="loading">LOADING</h1>
+  <div class="loading">
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    LOADING
+  </div>
+  <div class="hideCoverBtn">
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    <span class="btnBorder"></span>
+    CLOSE LOADING
+  </div>
 </cover>
