--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.d5539d.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.0f0985.css">
