--- a/source-src/css/cover.scss
+++ b/source-src/css/cover.scss
@@ -26,14 +26,15 @@ body {
     .loading {
       position: relative;
       color: #dedede;
-      // color: #75d0d9;
       font-size: 8rem;
+      padding: 0 45px;
       &::after {
         content: "LOADING";
         position: absolute;
         top: 0;
         left: 0;
         color: transparent;
+        padding: 0 45px;
         background-image: linear-gradient(
           to right,
           #c23616,
@@ -55,24 +56,105 @@ body {
         clip-path: circle(100px at 0% 50%);
         animation: move 5s infinite;
       }
+      .btnBorder {
+        position: absolute;
+        &:nth-child(1) {
+          width: 100%;
+          height: 10px;
+          top: 0;
+          left: 0;
+          background: linear-gradient(to right, transparent, #ffeb3b);
+          animation: animate1 2s linear infinite;
+          animation-delay: 0s;
+        }
+        @keyframes animate1 {
+          0% {
+            left: -100%;
+          }
+          50%,
+          100% {
+            left: 100%;
+          }
+        }
+        &:nth-child(2) {
+          width: 10px;
+          height: 100%;
+          top: -100%;
+          right: 0;
+          background: linear-gradient(to bottom, transparent, #9bfbc1);
+          animation: animate2 2s linear infinite;
+          // animation-delay: 0.5s;
+          animation-delay: 0s;
+        }
+
+        @keyframes animate2 {
+          0% {
+            top: -100%;
+          }
+          50%,
+          100% {
+            top: 100%;
+          }
+        }
+        &:nth-child(3) {
+          width: 100%;
+          height: 10px;
+          bottom: 0;
+          right: -100%;
+          background: linear-gradient(to left, transparent, #add5ff);
+          animation: animate3 2s linear infinite;
+          // animation-delay: 1s;
+          animation-delay: 0s;
+        }
+
+        @keyframes animate3 {
+          0% {
+            right: -100%;
+          }
+          50%,
+          100% {
+            right: 100%;
+          }
+        }
+        &:nth-child(4) {
+          width: 10px;
+          height: 100%;
+          bottom: -100%;
+          left: 0;
+          background-image: linear-gradient(to top, transparent, #fed6e3);
+          animation: animate4 2s linear infinite;
+          // animation-delay: 1.5s;
+          animation-delay: 0s;
+        }
+
+        @keyframes animate4 {
+          0% {
+            bottom: -100%;
+          }
+          50%,
+          100% {
+            bottom: 100%;
+          }
+        }
+      }
     }
 
     .hideCoverBtn {
       display: inline-block;
-      padding: 20px 30px;
+      padding: 5px 15px;
       color: #03e9f4;
       text-decoration: none;
       letter-spacing: 4px;
       text-transform: uppercase;
-      position: relative;
-      // overflow: hidden;
-
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
       transition: 0.5s;
-      margin: 40px 0;
       border-radius: 10px;
       z-index: 1;
       cursor: pointer;
-      // -webkit-box-reflect: below -5px linear-gradient(transparent, #000);
+      // -webkit-box-reflect: below 1px linear-gradient(transparent, #999);
       &:hover::before {
         animation: sun 2s infinite;
       }
@@ -106,87 +188,6 @@ body {
         background-size: 400%;
         color: #fff;
         animation: sun 2s infinite;
-      }
-      .btnBorder {
-        position: absolute;
-        &:nth-child(1) {
-          width: 100%;
-          height: 5px;
-          top: 0;
-          left: 0;
-          background: linear-gradient(to right, transparent, #ffeb3b);
-          animation: animate1 2s linear infinite;
-          animation-delay: 0s;
-        }
-        @keyframes animate1 {
-          0% {
-            left: -100%;
-          }
-          50%,
-          100% {
-            left: 100%;
-          }
-        }
-        &:nth-child(2) {
-          width: 5px;
-          height: 100%;
-          top: -100%;
-          right: 0;
-          background: linear-gradient(to bottom, transparent, #9bfbc1);
-          animation: animate2 2s linear infinite;
-          // animation-delay: 0.5s;
-          animation-delay: 0s;
-        }
-
-        @keyframes animate2 {
-          0% {
-            top: -100%;
-          }
-          50%,
-          100% {
-            top: 100%;
-          }
-        }
-        &:nth-child(3) {
-          width: 100%;
-          height: 5px;
-          bottom: 0;
-          right: -100%;
-          background: linear-gradient(to left, transparent, #add5ff);
-          animation: animate3 2s linear infinite;
-          // animation-delay: 1s;
-          animation-delay: 0s;
-        }
-
-        @keyframes animate3 {
-          0% {
-            right: -100%;
-          }
-          50%,
-          100% {
-            right: 100%;
-          }
-        }
-        &:nth-child(4) {
-          width: 5px;
-          height: 100%;
-          bottom: -100%;
-          left: 0;
-          background-image: linear-gradient(to top, transparent, #fed6e3);
-          animation: animate4 2s linear infinite;
-          // animation-delay: 1.5s;
-          animation-delay: 0s;
-        }
-
-        @keyframes animate4 {
-          0% {
-            bottom: -100%;
-          }
-          50%,
-          100% {
-            bottom: 100%;
-          }
-        }
       }
     }
   }
