update change light

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.bf6d65.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.d22467.css">
