--- a/layout/_partial/left-col.ejs
+++ b/layout/_partial/left-col.ejs
@@ -58,6 +58,9 @@
           <%}%>
 			</div>
 		</nav>
+    <div class="toggleLight">
+      <span class="dark">黑夜</span>
+    </div>
     <div class="motto">
       <div>行 到 水 穷 处</div>
       <div>坐 看 云 起 时</div>
