--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -33,8 +33,42 @@
       .switch-btn {
         max-height: calc(100% - 244px);
         overflow-y: auto;
+
+        .toggleLight {
+          width: 100%;
+          height: 35px;
+          text-align: center;
+          margin-bottom: 10px;
+
+          .dark {
+            display: inline-block;
+            border-radius: 35px;
+            width: 35px;
+            height: 100%;
+            background-image: linear-gradient(
+              to bottom,
+              #d7d2cc 0%,
+              #304352 100%
+            );
+            box-shadow: 0 0 5px #ccc inset;
+            font-size: 10px;
+            color: #fff;
+            line-height: 36px;
+            cursor: pointer;
+          }
+
+          .light {
+            background-color: none;
+            color: #333;
+            background-image: linear-gradient(
+              to bottom,
+              #fff1eb 0%,
+              #ace0f9 100%
+            );
+          }
+        }
+
         .motto {
-          margin-top: 58px;
           font-size: 20px;
           font-weight: 700;
           background-image: -webkit-linear-gradient(
