--- a/source-src/css/left.scss
+++ b/source-src/css/left.scss
@@ -47,12 +47,12 @@
             height: 100%;
             background-image: linear-gradient(
               to bottom,
-              #d7d2cc 0%,
-              #304352 100%
+              #2b5876 0%,
+              #4e4376 100%
             );
             box-shadow: 0 0 5px #ccc inset;
             font-size: 10px;
-            color: #fff;
+            color: #ccc;
             line-height: 36px;
             cursor: pointer;
           }
