--- a/source-src/css/mobile-light.scss
+++ b/source-src/css/mobile-light.scss
@@ -49,3 +49,27 @@
     background-color: transparent;
   }
 }
+
+.mobileDark {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  height: 35px;
+  width: 35px;
+  border-radius: 40px;
+  box-shadow: 0 0 5px #ccc inset;
+  background-image: linear-gradient(to bottom, #2b5876 0%, #4e4376 100%);
+  font-size: 10px;
+  text-align: center;
+  line-height: 36px;
+  z-index: 888;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+.mobileLight {
+  opacity: 0;
+  background-color: none;
+  color: #333;
+  background-image: linear-gradient(to bottom, #fff1eb 0%, #ace0f9 100%);
+}
