--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.089c5e.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.72fa04.css">
