--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -46,4 +46,7 @@
 		</header>				
 	</div>
 	<div class="mobile-mask" style="display:none" q-show="isShow"></div>
+  <div class="mobileToggleLight">
+    <span class="mobileDark">黑夜</span>
+  </div>
 </nav>
