--- a/source-src/css/mobile-cover.scss
+++ b/source-src/css/mobile-cover.scss
@@ -2,8 +2,11 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
   .cover {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-size: 150% 150%;
