--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -8,6 +8,57 @@ body,
 
 #mobile-nav {
   display: block;
+
+  /*
+  .dark {
+            display: inline-block;
+            border-radius: 35px;
+            width: 35px;
+            height: 100%;
+            background-image: linear-gradient(
+              to bottom,
+              #2b5876 0%,
+              #4e4376 100%
+            );
+            box-shadow: 0 0 5px #ccc inset;
+            font-size: 10px;
+            color: #ccc;
+            line-height: 36px;
+            cursor: pointer;
+          }
+
+          .light {
+            background-color: none;
+            color: #333;
+            background-image: linear-gradient(
+              to bottom,
+              #fff1eb 0%,
+              #ace0f9 100%
+            );
+          }
+  */
+  .mobileToggleLight {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 38px;
+    height: 38px;
+    z-index: 888;
+    .mobileDark {
+      width: 35px;
+      height: 35px;
+      text-align: center;
+      line-height: 36px;
+      border-radius: 50px;
+      background-image: linear-gradient(to bottom, #2b5876 0%, #4e4376 100%);
+      box-shadow: 0 0 5px #ccc inset;
+      font-size: 10px;
+      color: #ccc;
+    }
+  }
 }
 .mid-col.show .article {
   background: none;
