update mobile change to light

--- a/source-src/css/mobile.scss
+++ b/source-src/css/mobile.scss
@@ -57,6 +57,12 @@ body,
       box-shadow: 0 0 5px #ccc inset;
       font-size: 10px;
       color: #ccc;
+      visibility: hidden;
+    }
+    .mobileLight {
+      background-color: none;
+      color: #333;
+      background-image: linear-gradient(to bottom, #fff1eb 0%, #ace0f9 100%);
     }
   }
 }
