--- a/source-src/css/main.scss
+++ b/source-src/css/main.scss
@@ -21,6 +21,7 @@
 @import "./footer";
 @import "./light";
 @import "./cover";
+@import "./music";
 @media screen and (max-width: 800px) {
   @import "./mobile";
   @import "./mobile-slider";
