add togglt aplayer

--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.1ff3fe.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.a7bbc6.css">
