--- a/layout/_partial/css.ejs
+++ b/layout/_partial/css.ejs
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.e22125.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./main.001038.css">
