--- a/source-src/css/music.scss
+++ b/source-src/css/music.scss
@@ -8,11 +8,25 @@
 
     .aplayer-lrc {
       max-width: 280px;
-      bottom: 90px;
+      top: 44px;
       left: 19px;
+      height: 30px;
       z-index: 0;
       opacity: 0;
       transition: all 0.5s ease;
+      text-shadow: none;
+
+      p {
+        font-size: 14px;
+        background-image: linear-gradient(
+          -225deg,
+          #2cd8d5 0%,
+          #c5c1ff 56%,
+          #ffbac3 100%
+        );
+        -webkit-background-clip: text;
+        color: transparent;
+      }
     }
 
     .hideLrc {
@@ -24,18 +38,27 @@
       position: relative;
       border: none;
       max-height: 261px;
-      background-color: #333;
+      margin-bottom: 68px;
+      background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
       z-index: 88;
+      text-align: left;
+      .aplayer-list-author {
+        color: #c9c9c9;
+      }
+      .aplayer-list-cur {
+        background-color: gold !important;
+      }
       ol {
         li {
+          box-shadow: 0 0 6px #ccc inset;
           color: #c9c9c9;
         }
         li.aplayer-list-light {
-          background: #888;
+          background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
           color: gold;
         }
         li:hover {
-          background: #666;
+          background-image: linear-gradient(-225deg, #cbbacc 0%, #2580b3 100%);
         }
       }
     }
@@ -44,13 +67,36 @@
       max-width: 261px;
       left: 20px;
       bottom: 22px;
-      border-radius: 10px;
-      left: -55px;
+      border-radius: 15px;
+      left: -56px;
       visibility: hidden;
       transition: all 0.3s ease;
+      background-image: linear-gradient(to right, #2b5876 0%, #4e4376 100%);
+
+      .aplayer-controller {
+        display: none;
+      }
+
+      .aplayer-info {
+        background-image: linear-gradient(to right, #2b5876 0%, #4e4376 100%);
+        border: none;
+      }
 
       .aplayer-miniswitcher {
         visibility: visible;
+        background-image: linear-gradient(
+          to bottom,
+          #3f51b1 0%,
+          #5a55ae 13%,
+          #7b5fac 25%,
+          #8f6aae 38%,
+          #a86aa4 50%,
+          #cc6b8e 62%,
+          #f18271 75%,
+          #f3a469 87%,
+          #f7c978 100%
+        );
+        box-shadow: 0 0 5px #ccc inset;
       }
 
       .aplayer-pic {
@@ -58,10 +104,7 @@
         border-bottom-left-radius: 10px;
         visibility: hidden;
         transition: all 0.3s ease;
-      }
-
-      .aplayer-music {
-        color: #666;
+        box-shadow: 0 0 10px #fff inset;
       }
     }
 
@@ -72,6 +115,10 @@
       .aplayer-pic {
         visibility: visible;
         transition: all 0.3s ease;
+      }
+
+      .aplayer-controller {
+        display: flex;
       }
     }
   }
